services/python-staticjs-furever-home/python-backend/openshift/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: furever-home
    component: deployment
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"petadoption-db"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        imagePullPolicy: Always
        image: quay.io/kenmoini/furever-home-backend:latest
        ports:
          - containerPort: 8080
            protocol: TCP
