services/python-staticjs-furever-home/python-backend/openshift/02-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: furever-home-backend
    app.kubernetes.io/name: furever-home-backend
    app.kubernetes.io/part-of: furever-home
    component: service
  name: furever-home-backend
spec:
  ports:
    - name: furever-home-backend
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: furever-home-backend
  type: ClusterIP
